--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -572,6 +572,18 @@ section {
   width: 100%;
   margin-top: 32px;
   margin-bottom: auto;
+  position: relative;
+}
+
+.industry-det-wrapper > span {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: url('../images/industries/blob-scatter-haikei(1).svg');
+  background-size: cover;
+  background-position: center;
+  animation: industry-circles-bg-1 6s linear infinite, industry-circles-bg-2 4s linear infinite;
+  filter: drop-shadow(-6px 6px #0002) drop-shadow(-12px 12px #0001);
 }
 
 .industry-circular {
@@ -1405,6 +1417,7 @@ section {
   justify-content: center;
   width: max-content;
   max-width: 1080px;
+  transition: all 0.75s ease-in-out;
 }
 
 .others-title-img-ctn {
@@ -1501,6 +1514,7 @@ section {
   gap: 32px;
   align-items: center;
   justify-content: center;
+  transition: all 0.75s ease-in-out;
 }
 
 .others-advantage-card-wrapper:nth-child(4n - 3) .others-advantage-card {
